--- a/core/templates/clients.html
+++ b/core/templates/clients.html
@@ -1,22 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    {% if user.is_authenticated %}
-        Hello {{ user.username }}
-        <a href="{% url 'logout' %}">Logout</a>
-    {% else %}
-        <a href="{% url 'login' %}">Login</a>
-    {% endif %}
-    <ul>
-    {% for client in clients %}
-        <li><p>{{ client }}</p>
-        <a href="{% url 'client_update' client.id %}">Edit</a> <a href="{% url 'client_delete' client.id %}">Delete</a></li>
-    {% endfor %}
-    </ul>
-    <a href="{% url 'client_create' %}">Create New</a>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}Welcome - Clients{% endblock %}
+
+{% block main %}
+    <div class="container">
+        <div class="jumbotron">
+            <div class="row">
+                <div class="col-10">
+                    <h2>Client List</h2>
+                </div>
+                <div class="col-2">
+                {% if user.is_authenticated %}
+                    Hello {{ user.username }}
+                    <a href="{% url 'logout' %}" class="badge badge-secondary">Logout</a>
+                {% else %}
+                    <a href="{% url 'login' %}" class="badge badge-secondary">Login</a>
+                {% endif %}
+                </div>
+             </div>
+
+                <ul class="list-group">
+                {% for client in clients %}
+                    <li class="list-group-item"><p>{{ client }}</p>
+                        <div class="text-right">
+                            <a href="{% url 'client_update' client.id %}" class="btn btn-info">Edit</a>
+                            <a href="{% url 'client_delete' client.id %}" class="btn btn-danger">Delete</a>
+                        </div>
+                    </li>
+                {% endfor %}
+                </ul>
+                <a href="{% url 'client_create' %}" class="btn btn-primary">Create New</a>
+
+        </div>
+    </div>
+{% endblock %}
