--- a/core/templates/confirm.html
+++ b/core/templates/confirm.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Welcome - Login{% endblock %}
+
+{% block main %}
     <p>Confirm you want to delete {{ client.name }}</p>
     <form method="post">
         {% csrf_token %}
         <button type="submit">Delete</button>
     </form>
-</body>
-</html>
+{% endblock %}
